--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <title>NUI React Boilerplate</title>
   </head>
-  <body>
+  <body id="background">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
