--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>NUI React Boilerplate</title>
+    <title>Windows 11 for FiveM</title>
   </head>
-  <body id="background">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
